--- a/gapminder.Rmd
+++ b/gapminder.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Gapminder Exercise Template"
-author: "Mine Cetinkaya-Rundel"
+author: "Janice Ding"
 date: "`r Sys.Date()`"
 output: html_document
 ---
@@ -29,20 +29,29 @@ gap <- read_csv("https://bit.ly/gap_data")
 How many observations are in this dataset?
 
 ```{r nrow}
+nrow(gap)
 ```
+Or use inline r chunck: 
+There are `r nrow(gap)` obs in the dataset. 
+
 
 ### Exercise 2
 
 Visualize the relationship between GDP and life expectancy for 
 countries in Europe in 1952 using a scatter plot.
 
-```{r eu_52}
+```{r eu52, fig.height=3.5, fig.width=7, echo=FALSE}
+eu_52 <- gap %>% 
+  filter(continent == "Europe", year== 1952)
+ggplot(data=eu_52, aes(x=gdpPercap, y =lifeExp)) +
+  geom_point()
+
 ```
 
 ### Exercise 3
 
 Add year 1967 in another color.
 
-```{r eu_52_67}
+```{r eu_5267}
 ```
 
